Fixed content aligning by right

--- a/styles/flex-style.css
+++ b/styles/flex-style.css
@@ -1,27 +1,22 @@
-html
-{
+html {
     font-family: sans-serif;
 }
 
-body
-{
+body {
     margin: 0;
 }
 
-section
-{
+section {
     display: flex;
     flex-flow: row nowrap;
 }
 
-header
-{
+header {
     background-color: darkcyan;
     height: 100px;
 }
 
-h1
-{
+h1 {
     margin: 0;
     color: aliceblue;
     text-align: center;
@@ -29,39 +24,30 @@ h1
     line-height: 100px;
 }
 
-article
-{
+article {
     background-color: blueviolet;
     padding: 10px;
     margin: 10px;
     flex: 1;
 }
 
-article:nth-of-type(3)
-{
+article:nth-of-type(3) {
     flex: 2;
 }
 
-.panel
-{
+.panel {
     background: black;
     border-radius: 10px;
     padding: 5px;
     margin: 10px;
     display: flex;
-    flex-flow:row;
-    flex-direction: row;
-    justify-content: last baseline;
-    width: 100%;
-
+    justify-content: flex-start; /* он вроде по дефолту такой, но я явно прописал чтоб точно ниче не сломалось*/
 }
 
-.buttonWrapper{
+.buttonWrapper {
     display: flex;
 }
 
-.buttonWrapper:last-child
-{   display: block;
-    position: relative;
-    margin-left: 10px;
+.buttonWrapper:last-child {
+    margin-left: auto;
 }
